argocd-vault-setup/vault-namespace.yaml
---
# Vault Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  labels:
    name: vault
    managed-by: gitops
